@@ -46,6 +46,7 @@
 * SumUp: Append partner_id to checkout_reference [naashton] #5272
 * Adyen: Update shopperInteraction [almalee24] #5273
 * CenPOS: Add test_url [jcreiff] #5274
+* Worldpay: Fix stored credentials issue [jherreraa] #5267
 
 == Version 1.137.0 (August 2, 2024)
 * Unlock dependency on `rexml` to allow fixing a CVE (#5181).
